# pptlive

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION.md  LICENSE  README.md  REFACTOR-PLAN.md  claude-desktop-feedback-18Jun2026.md  claude-llm-notes.md  issues.md  mkdocs.yml  pptlive-test-findings.md  pyproject.toml  roadmap-v2.md  roadmap.md  spec-linter.md  spec.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml  smoke.yml  test.yml
docs/: cli.md  concepts.md  cookbook.md  design.md  errors.md  getting-started.md  index.md  mcp.md  python-api.md  tutorial.md
docs/reviews/: gpt-5.4-review.md
examples/: README.md
examples/powershell/: build_report.ps1  quickstart.ps1
examples/python/: 01_quickstart.py  02_build_a_deck.py  03_restyle_deck.py
mcpb/: README.md  manifest.json  pyproject.toml
mcpb/src/: server.py
scripts/: animation_curated_spike.py  animation_spike.py  arrangement_spike.py  batch2_spike.py  busy_hresult_spike.py  cell_border_map_spike.py  cell_style_spike.py  chart_spike.py  comments_spike.py  composite_text_spike.py  effects_spike.py  export_pdf_argforms_spike.py  fill_advanced_spike.py  findreplace_spike.py  hyperlink_spike.py  inherit_probe.py  layout_spike.py  line_alpha_spike.py  master_spike.py  mcp_spike.py  media_longtail_spike.py  media_video_spike.py  newline_reads_spike.py  picture_spike.py  proofing_spike.py  render_select_spike.py  run_link_spike.py  save_export_spike.py  saveas_pdf_dirty_spike.py  set_picture_spike.py  shape_spike.py  show_spike.py  slide_background_spike.py  smartart_spike.py  spike.py  style_spike.py  table_col_smartart_node_spike.py  table_spike.py  text_model_spike.py  text_spike.py  (+4 more)
src/pptlive/: __init__.py  _anchors.py  _app.py  _batch.py  _charts.py  _com.py  _comments.py  _edit.py  _findreplace.py  _guide.py  _headersfooters.py  _presentation.py  _sections.py  _selection.py  _shapes.py  _show.py  _slides.py  _smartart.py  _snapshot.py  _tables.py  _theme.py  constants.py  exceptions.py  units.py
src/pptlive/_skill/pptlive-cli/: SKILL.md
src/pptlive/_skill/pptlive-python/: SKILL.md
src/pptlive/cli/: __init__.py  commands.py  main.py
src/pptlive/mcp/: __init__.py  __main__.py  server.py
tests/: conftest.py  test_anchor_by_id.py  test_anchors.py  test_animations.py  test_app.py  test_arrangement.py  test_charts.py  test_cli.py  test_comments.py  test_docs_parity.py  test_exceptions.py  test_fills_effects.py  test_findreplace.py  test_headers_footers.py  test_hyperlinks.py  test_mcp.py  test_media.py  test_paragraphs.py  test_pictures.py  test_render.py  test_run_links.py  test_save_export.py  test_sections.py  test_selection.py  test_selection_edit.py  test_shapes.py  test_show.py  test_slide_background.py  test_slide_lifecycle.py  test_slides.py  test_smartart.py  test_smoke.py  test_snapshot.py  test_styling.py  test_tables.py  test_theme.py  test_transitions.py  test_typelib_parity.py
tests/fixtures/: build_smoke_fixture.py  smoke_deck.pptx
