[project]
name = "pptlive"
version = "0.7.0"
description = "Drive a running Microsoft PowerPoint instance from Python — xlwings, but for PowerPoint, and LLM-friendly."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Thomas.Villani", email = "thomas.villani@gmail.com" }
]
# Dev pins 3.13 (.python-version); the library targets 3.11+. Sibling `wordlive`
# is being bumped to the same floor in lockstep, so the parity holds — 3.11+
# syntax (StrEnum, assert_never, …) is now fair game.
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1",
    "pywin32>=306 ; sys_platform == 'win32'",
]

# The MCP server is optional: `pip install pptlive[mcp]` (or `uv add pptlive[mcp]`)
# pulls in the official Model Context Protocol SDK and exposes the `pptlive-mcp`
# stdio server for Claude Desktop and other MCP clients. CLI-only users never
# pay for it. `mcp` is also folded into `dev` so the test suite exercises it.
[project.optional-dependencies]
mcp = [
    "mcp>=1.2",
]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
    "ruff>=0.8",
    "mypy>=1.13",
    "mcp>=1.2",
    "bump-my-version>=0.28",
]

# Documentation site (MkDocs Material + mkdocstrings autodoc). Build with
# `uv run --extra docs mkdocs serve` (live preview) or `mkdocs build`.
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mkdocs-include-markdown-plugin>=6.2",
]

[project.scripts]
pptlive = "pptlive.cli.main:main"
pptlive-mcp = "pptlive.mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: requires a running Microsoft PowerPoint installation",
]
# Smoke tests need a real PowerPoint; skip them unless explicitly selected
# with `-m smoke`.
addopts = "-m 'not smoke'"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["site", "dist"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: flake8-bugbear.
select = ["E", "F", "W", "I", "UP", "B"]
# E501 (line length) is left to the formatter, which wraps code lines; this
# avoids nagging about long strings/comments the formatter won't break.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Bare attribute access inside `pytest.raises(...)` is the assertion — it
# triggers a lazy property that must raise. Not a useless expression.
"tests/**" = ["B018"]

[tool.mypy]
python_version = "3.11"
files = ["src/pptlive"]
warn_redundant_casts = true
warn_unused_ignores = false

# pywin32 ships no type stubs, and isn't installed off-Windows at all. This one
# override covers both cases: `import-not-found` on Linux CI (package absent)
# and `import-untyped` on Windows (present, but no stubs).
[[tool.mypy.overrides]]
module = ["pythoncom", "pywintypes", "win32com.*"]
ignore_missing_imports = true

# Version bumping — `bump-my-version` keeps the version in sync across the root
# project and the MCPB bundle (its manifest, its pyproject, and the `>=` dep
# pin), then commits and tags so the `v*` push fires release.yml. release.yml
# re-checks the bundle pins, so a stale .mcpb can never ship.
#   uv run bump-my-version bump patch    # 0.1.0 -> 0.1.1  (also: minor / major)
#   uv run bump-my-version bump --new-version 1.0.0 minor   # explicit target
[tool.bumpversion]
current_version = "0.7.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
tag_name = "v{new_version}"
message = "Bump version: {current_version} → {new_version}"

# Root package version.
[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

# MCPB bundle metadata + the `pptlive[mcp]>=` dependency pin.
[[tool.bumpversion.files]]
filename = "mcpb/manifest.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[[tool.bumpversion.files]]
filename = "mcpb/pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "mcpb/pyproject.toml"
search = '>={current_version}'
replace = '>={new_version}'
